--- a/style.css
+++ b/style.css
@@ -1,87 +1,336 @@
 /*----------------------------------GENERELT START--------------------------------*/
 
-img {
-    width: 100%;
-}
-
 * {
     margin: 0;
     box-sizing: border-box;
 }
 
+body {
+    /*overflow: hidden;*/
+    width: 100%;
+    height: auto;
+}
 
 /*OVERSKRIFT*/
 h1 {
-
+    font-family: 'Major Mono Display', monospace;
+    font-size: 4em;
+    margin: 0;
 }
-
 
 /*UNDEROVERSKRIFT*/
 h2 {
-
+    margin: 2px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    font-family: monospace;
+    font-weight: 500;
 }
-
 
 /*MELLEMRUBRIK*/
 h3 {
-
+    font-family: 'Major Mono Display', monospace;
+    font-size: 2.5em;
+    color: black;
+    margin-bottom: 10px;
 }
 
+/*UNDEROVERSKRIFT*/
+h4 {
+    font-family: 'Tangerine', cursive;
+    margin: 0;
+    font-size: 4em;
+    font-weight: 500;
+}
 
 /*BRØDTEKST*/
 p {
 
-
 }
-
-
-/*UNDEROVERSKRIFT*/
-h4 {
-
-}
-
 
 /*----------------------------------GENERELT SLUT--------------------------------*/
 
 
-/*
-
-img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-  }
 
 
-section {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 
-flex-wrap: wrap;
-}
+
+
+/*----------------------------------FORSIDE START--------------------------------*/
 
 header {
-
-    color: #e33232;
-    font-size: 6.2em;
-
-      position: fixed;
-  top: 13%;
-  left: 26%;
-  transform: translate(-50%, -50%);
+    margin-bottom: 50px;
 }
-*/
+
+.menu {
+    position: relative;
+    margin-top: 60px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    text-align: center;
+}
+
+#info img {
+    width: 100%;
+    justify-self: center;
+    height: 270px;
+}
+
+article {
+
+    padding: 10px;
+    border-bottom: 6px solid black;
+    background-color: lightgrey;
+    justify-self: center;
+    margin-bottom: 25px;
+}
+
+section {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    grid-gap: 20px;
+}
+
+/*----------------------------------FORSIDE SLUT--------------------------------*/
 
 
 
 
-/*----------------------------------NAV START--------------------------------*/
 
 
 
 
-/*----------------------------------NAV SLUT--------------------------------*/
+
+
+
+
+/*----------------------------------SPLASH START--------------------------------*/
+
+.splashbillede {
+    position: relative;
+    height: 500px;
+    overflow: hidden;
+    background: url(splash.jpg) no-repeat center;
+    background-size: cover;
+}
+
+.container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    text-align: center;
+}
+
+/*----------------------------------SPLASH SLUT--------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+/*---------------------------------- MEDIA QUARIES START  --------------------------------*/
+
+@media (max-width: 700px) {
+    header{
+        display: grid;
+
+    }
+
+    button.filter {
+        margin: 0;
+           border-block-end: revert;
+    }
+}
+
+
+@media (max-width: 1365px) {
+    header{
+        display: grid;
+
+    }
+
+    button.filter {
+        margin: 0;
+           border-block-end: revert;
+    }
+}
+
+/*----------------------------------MEDIA QUARIES SLUT --------------------------------*/
+
+
+
+
+
+
+
+
+
+
+/*----------------------------------FILTER START--------------------------------*/
+.filter {
+    border: none;
+    outline: none;
+    padding: 16px 35px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    font-size: 18px;
+    font-family: 'Major Mono Display', monospace;
+    margin-left: 34px;
+}
+
+.filter:focus {
+    color: white;
+    background-color: black;
+}
+
+.filter:hover {
+    background-color: grey;
+}
+
+/*----------------------------------FILTER SLUT--------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------------------PILE START--------------------------------*/
+
+.box {
+    position: absolute;
+    top: 420px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.box span {
+    display: block;
+    width: 30px;
+    height: 30px;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
+    transform: rotate(45deg);
+    animation: animate 2s infinite;
+    margin: -10px;
+
+}
+
+.box span:nth-child(2) {
+    animation-delay: -0.2s;
+
+}
+
+.box span:nth-child(3) {
+    animation-delay: -0.4s;
+}
+
+@keyframes animate {
+    0% {
+        opacity: 0;
+        transform: rotate(45deg) translate(-20px, -20px);
+    }
+
+    50% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        transform: rotate(45deg) translate(20px, 20px);
+    }
+
+}
+
+/*----------------------------------PILE SLUT --------------------------------*/
+
+
+
+
+
+
+
+
+
+
+
+/*----------------------------------POPOP START --------------------------------*/
+
+#popop {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .8);
+    display: none;
+}
+
+#popop article {
+       width: 80vw;
+    height: 60vh;
+    margin: 4rem auto;
+    background-color: white;
+        display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+
+#luk {
+    position: fixed;
+    top: 63%;
+    right: 1em;
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    padding: .1em;
+    width: 25px;
+    height: 25px;
+    left: 69%;
+}
+
+
+#popop img {
+    width: 100%;
+    align-self: center;
+}
+
+
+#popop section {
+    display: grid;
+     border-block-end: revert;
+    grid-gap: 0;
+
+}
+
+
+#popop h2{
+align-self: center;
+    text-align: center;
+    font-size: 3em;}
+
+
+#popop p{
+align-self: center;
+    text-align: center;
+    font-size: 1em;}
+
+
+
+/*----------------------------------POPOP SLUT --------------------------------*/
